# quik-connector

./: .gitignore  quik-connector.cabal  stack.yaml
app/: Config.hs  Main.hs  Version.hs
src/: Broker.hs  Commissions.hs  ReplayServer.hs  TickTable.hs
src/ATrade/Quotes/: QTIS.hs
src/Broker/: PaperBroker.hs  Protocol.hs  QuikBroker.hs  Server.hs
src/Broker/QuikBroker/: HsQuik.hs  Trans2QuikApi.hs
src/Data/: ATrade.hs
src/Network/: Telegram.hs
src/QuoteSource/: DDE.hs  DataImport.hs  PipeReader.hs  Server.hs  TableParser.hs  XlParser.hs
src/QuoteSource/TableParsers/: AllParamsTableParser.hs
src/System/Win32/: DDE.hs  XlParser.hs
