name:                quik-connector
version:             0.1.0.0
synopsis:            Atrade-Quik Connector application
description:         Please see README.md
homepage:            https://github.com/asakul/quik-connector
license:             BSD3
license-file:        LICENSE
author:              Denis Tereshkin
maintainer:          denis@kasan.ws
copyright:           2016 Denis Tereshkin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     QuoteSource.DataImport
                     , QuoteSource.TableParser
                     , QuoteSource.TableParsers.AllParamsTableParser
                     , QuoteSource.PipeReader
                     , Broker.PaperBroker
                     , Broker.QuikBroker
                     , Broker.QuikBroker.Trans2QuikApi
                     , Network.Telegram
  ghc-options:         -Wall -Wunsupported-calling-conventions
  build-depends:       base >= 4.7 && < 5
                     , Win32
                     , haskell-gi-base
                     , gi-gtk
                     , binary
                     , data-binary-ieee754
                     , bytestring
                     , text
                     , Decimal
                     , time
                     , vector
                     , containers
                     , mtl
                     , transformers
                     , datetime
                     , BoundedChan
                     , hslogger
                     , zeromq4-haskell
                     , hashable
                     , unordered-containers
                     , aeson
                     , cond
                     , scientific
                     , libatrade
                     , deepseq
                     , errors
                     , split
                     , bimap
                     , safe
                     , conduit
                     , conduit-extra
                     , stm
                     , stm-conduit
                     , http-client
                     , http-client-tls
                     , utf8-string
                     , connection
                     , text-format
                     , monad-loops
                     , extra
                     , incremental-parser
                     , attoparsec
                     , safe-exceptions
  default-language:    Haskell2010
--  extra-libraries:     "user32"
  other-modules:       System.Win32.XlParser
                     , System.Win32.DDE
                     

executable quik-connector-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , quik-connector
                     , Win32
                     , haskell-gi-base
                     , gi-gtk
                     , BoundedChan
                     , hslogger
                     , aeson
                     , bytestring
                     , unordered-containers
                     , vector
                     , text
                     , zeromq4-haskell
                     , zeromq4-haskell-zap
                     , libatrade
                     , transformers
                     , stm
                     , http-client
                     , http-client-tls
                     , utf8-string
                     , connection
                     , directory
                     , errors
  default-language:    Haskell2010
  other-modules:       Config
-- extra-libraries:     "user32"

test-suite quik-connector-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quik-connector
                     , Win32
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/asakul/quik-connector
